--- a/band_final.vcxproj.filters
+++ b/band_final.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClInclude Include="printf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.band.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
